# Freya

./: .clang-ignore  .gitignore  .gitmodules  .pre-commit-config.yaml  404.html  AGENTS.md  CMakeLists.txt  index.html  mkdocs.yml  sitemap.xml
.github/workflows/: cmake-multi-platform-2.yml  cmake-multi-platform.yml  format-check.yml
.kilo/agent/: vulkan-modernization-specialist.md  vulkan-optmization-specialist.md
.kilo/command/: format.md
.kilo/plans/: compress-g-buffer-plan.md  deferred-rendering-plan-summary.md  deferred-rendering-plan.md  unified-lighting-plan-summary.md  unified-lighting-plan.md
Examples/: CMakeLists.txt  Main.cpp
Examples/IndustrialPipeLamp/: CMakeLists.txt
Examples/Sofa/: CMakeLists.txt  Main.cpp
Examples/Sofa/Resources/Models/: OfficeSofa.fbx  industrial_pipe_lamp.glb
Include/: Macro.hpp
Include/Asset/: Mesh.hpp  MeshPool.hpp  Texture.hpp  TexturePool.hpp  Vertex.hpp
Include/Builders/: ApplicationBuilder.hpp  BufferBuilder.hpp  CommandPoolBuilder.hpp  DeferredPassBuilder.cpp  DeferredPassBuilder.hpp  DeviceBuilder.hpp  ForwardPassBuilder.hpp  ImageBuilder.hpp  InstanceBuilder.hpp  PhysicalDeviceBuilder.hpp  RenderPassBuilder.hpp  RendererBuilder.hpp  ShaderModuleBuilder.hpp  SurfaceBuilder.hpp  SwapChainBuilder.hpp  WindowBuilder.hpp
Include/Containers/: MeshSet.hpp  SparseSet.hpp
Include/Core/: AbstractApplication.hpp  Buffer.hpp  CommandPool.hpp  DeferredPass.hpp  Device.hpp  ForwardPass.hpp  Image.hpp  Instance.hpp  PhysicalDevice.hpp  RenderPass.hpp  Renderer.hpp  ShaderModule.hpp  Surface.hpp  SwapChain.hpp  UniformBuffer.hpp  Window.hpp
Include/Events/: Event.hpp  EventManager.hpp  Events.hpp  Gamepad.hpp  KeyCode.hpp  Keyboard.hpp  Mouse.hpp  Publisher.hpp  Window.hpp
Include/Events/Keyboard/: KeyPressedEvent.hpp  KeyReleasedEvent.hpp  KeyboardEvent.hpp
Include/Events/Window/: WindowCloseEvent.hpp  WindowEvent.hpp  WindowResizeEvent.hpp
Include/Factories/: MeshPoolFactory.hpp  TexturePoolFactory.hpp
Include/Freya/: Freya.hpp
Include/Freya/Asset/: MeshPool.hpp  TexturePool.hpp
Include/Freya/Builders/: ApplicationBuilder.hpp  CommandPoolBuilder.hpp  DeferredCompressedPassBuilder.hpp  DeferredPassBuilder.hpp  DeviceBuilder.hpp  ForwardPassBuilder.hpp  ImageBuilder.hpp  InstanceBuilder.hpp  PhysicalDeviceBuilder.hpp  RendererBuilder.hpp  ShaderModuleBuilder.hpp  SurfaceBuilder.hpp  SwapChainBuilder.hpp  WindowBuilder.hpp
Include/Freya/Core/: AbstractApplication.hpp  Buffer.hpp  CommandPool.hpp  DeferredCompressedPass.hpp  DeferredPass.hpp  ForwardPass.hpp  Instance.hpp  Renderer.hpp  ShaderModule.hpp  Surface.hpp  SwapChain.hpp  Window.hpp
Include/Freya/Events/: EventManager.hpp  Events.hpp  KeyCode.hpp  Mouse.hpp  Publisher.hpp
Include/Freya/Factories/: MeshPoolFactory.hpp  TexturePoolFactory.hpp
Shaders/: Frag.spv  Shader.frag  Shader.vert  Vert.spv
Shaders/Common/: Dither.glsl
Shaders/Compute/: LODSelection.comp  LODSelection.spv
Shaders/Deferred/: Composition.frag  Composition.frag.spv  Frag.spv  GBuffer.frag  GBuffer.vert  Gbuffer.frag.spv  Gbuffer.vert.spv  gbuffer.frag  gbuffer.vert
Shaders/DeferredCompressed/: composing.frag  composing.frag.spv  composing.vert  depth.frag  depth.vert  depth.vert.spv  downsample.frag  gbuffer.frag  gbuffer.frag.spv  gbuffer.vert.spv  lighting.frag  lighting.frag.spv  lighting.vert  threshold.frag  translucency.frag  translucency.frag.spv  translucency.vert  translucency.vert.spv  upsample.frag
Shaders/Forward/: Frag.frag  Frag.spv  LODFrag.frag  Shader.frag  Shader.vert  Vert.spv
Source/Asset/: Mesh.cpp  MeshPool.cpp  TexturePool.cpp  Vertex.cpp
Source/Builders/: ApplicationBuilder.cpp  BufferBuilder.cpp  CommandPoolBuilder.cpp  DeferredCompressedPassBuilder.cpp  DeferredPassBuilder.cpp  DeviceBuilder.cpp  ForwardPassBuilder.cpp  ImageBuilder.cpp  InstanceBuilder.cpp  PhysicalDeviceBuilder.cpp  RenderPassBuilder.cpp  RendererBuilder.cpp  ShaderModuleBuilder.cpp  SurfaceBuilder.cpp  SwapChainBuilder.cpp  WindowBuilder.cpp
Source/Containers/: MeshSet.cpp
Source/Core/: AbstractApplication.cpp  Buffer.cpp  CommandPool.cpp  ForwardPass.cpp  Image.cpp  Instance.cpp  PhysicalDevice.cpp  RenderPass.cpp  Renderer.cpp  Surface.cpp  SwapChain.cpp  UniformBuffer.cpp  Window.cpp
Source/Factories/: MeshPoolFactory.cpp  TexturePoolFactory.cpp
assets/: index.html
builders/: index.html
cmake/: CompileShaders.cmake
containers/: index.html
core/: index.html
docs/: assets.md  builders.md  containers.md  core.md  events.md  examples.md  index.md  navigation.md
events/: index.html
examples/: index.html
include/Freya/: Freya.hpp
navigation/: index.html
scripts/: format.ps1  format.sh
search/: search_index.json
src/Freya/: FreyaOptions.hpp  Pch.hpp
src/Freya/Asset/: LODPool.cpp  LODPool.hpp  LODService.cpp  LODService.hpp  LODTypes.hpp  Material.hpp  MaterialPool.cpp  MaterialPool.hpp  Mesh.hpp  MeshPool.cpp  MeshPool.hpp  Texture.hpp  TexturePool.cpp  TexturePool.hpp  Vertex.cpp  Vertex.hpp
src/Freya/Builders/: ApplicationBuilder.cpp  ApplicationBuilder.hpp  BloomPassBuilder.cpp  BloomPassBuilder.hpp  BufferBuilder.cpp  BufferBuilder.hpp  CommandPoolBuilder.cpp  CommandPoolBuilder.hpp  CompositePassBuilder.cpp  CompositePassBuilder.hpp  DeferredCompressedPassBuilder.cpp  DeferredCompressedPassBuilder.hpp  DeferredPassBuilder.cpp  DeferredPassBuilder.hpp  DeviceBuilder.cpp  DeviceBuilder.hpp  ForwardPassBuilder.cpp  ForwardPassBuilder.hpp  FreyaOptionsBuilder.hpp  ImageBuilder.cpp  ImageBuilder.hpp  InstanceBuilder.cpp  InstanceBuilder.hpp  LODBuilder.hpp  LightServiceBuilder.hpp  PhysicalDeviceBuilder.cpp  PhysicalDeviceBuilder.hpp  RenderPassBuilder.cpp  RenderPassBuilder.hpp  RendererBuilder.cpp  RendererBuilder.hpp  ShaderModuleBuilder.cpp  ShaderModuleBuilder.hpp  SurfaceBuilder.cpp  SurfaceBuilder.hpp  SwapChainBuilder.cpp  SwapChainBuilder.hpp  WindowBuilder.cpp  WindowBuilder.hpp
src/Freya/Containers/: MeshSet.hpp  SparseSet.hpp
src/Freya/Core/: AbstractApplication.cpp  AbstractApplication.hpp  BloomPass.cpp  BloomPass.hpp  Image.cpp  (+34 more)
(+9 files in other folders)
